# Artha

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  decay_sweep.txt  docker-compose.yml  gen_issues.py  pyproject.toml  quant-platform-design.md  quant-platform-issues.md  run_real_pipeline.py
.github/workflows/: ci.yml
configs/: config.dev.yaml  config.prod.yaml  config.staging.yaml  config.yaml
docs/adr/: 0001-target-construction.md  0002-feast-offline-store.md  0003-mlflow-only-tracking.md
feature_store/feature_repo/: feature_store.yaml  features.py
frontend/: index.html
migrations/: env.py
migrations/versions/: 0001_baseline.py
scripts/: backtest.py  enrich_breadth.py  enrich_macro.py  enrich_sentiment.py  evaluate.py  fetch_news.py  ingest.py  ingest_n50.py  train.py
src/backtest/: costs.py  engine.py  stats.py
src/common/: config.py  context.py  exceptions.py
src/data/: corporate_actions.py  lineage.py  pit.py  raw_lake.py  symbols.py  targets.py  validators.py
src/features/: momentum.py  volatility.py  volume.py
src/monitoring/: metrics.py
src/nlp/: llm_client.py  sentiment.py
src/serve/: app.py  models.py
src/training/: walk_forward.py
tests/leakage/: test_future_leak.py
tests/unit/: test_backtest_engine.py  test_backtest_stats.py  test_collectors.py  test_common.py  test_conformal.py  test_corporate_actions.py  test_costs.py  test_data.py  test_feature_store.py  test_features.py  test_lightgbm_trainer.py  test_llm_client.py  test_monitoring.py  test_pit.py  test_sentiment.py  test_serve.py  (+3 more)
(+6 files in other folders)
